--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+* {
+  font-family: 'Montserrat', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+}
+
+a {
+  color: unset;
+  text-decoration: none;
+}
+
+.add-edit-page form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.posts-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 10px;
+  margin-top: 50px;
+  column-gap: 25px;
+}
+
+.post-card-image {
+  object-fit: contain !important;
+}
+
+.post-card-description {
+  height: 42px;
+  overflow: hidden;
+}
+
+.post-card-collapse {
+  position: relative;
+  top: 0;
+}
+
+.filters-block {
+  display: grid;
+  grid-template-columns: 250px 200px 200px 150px;
+  column-gap: 25px;
+  align-items: center;
+}
+
+.filters-block button {
+  margin-top: 20px;
+}
+
+.my-pagination {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+}
+
+.post-details {
+  display: flex;
+  margin-top: 50px;
+}
+.post-details img {
+  width: 40%;
+  height: 500px;
+  object-fit: contain;
+}
+.post-details > div {
+  width: 60%;
+}
+
+.post-details li {
+  margin: 20px 5px;
+  font-size: 20px;
+}
+
+.post-details li strong {
+  width: 120px;
+  display: inline-block;
+}
+
+.post-details h2 {
+  font-size: 40px;
+  margin-top: 0;
+  margin-left: 20px;
+}
+
+.post-details-comment h3 {
+  font-size: 24px;
+  text-align: center;
+}
+.post-details-comment form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+.post-details-comment > div {
+  max-width: 750px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.comment {
+  background-color: rgb(214, 214, 214);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 15px 0;
+}
+.comment h5 {
+  font-size: 20px;
+  margin: 0;
 }
